--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!--  -->
 <section class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Preschool In</div>
+        <div class="masthead-subheading">Preschool & Daycare in</div>
         <div class="masthead-heading">Sector 51, Noida</div>
         <!-- <p class="masthead-pera">We Offer a variety of program to meet your child's needs.</p> -->
         <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">View Fees</a>
