--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
 <!--  -->
 <section class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Preschool & Daycare in</div>
-        <div class="masthead-heading">Sector 51, Noida</div>
-        <!-- <p class="masthead-pera">We Offer a variety of program to meet your child's needs.</p> -->
+        <h1 class="masthead-heading">Pre School near Geetanjali Enclave in New Delhi</h1>
+        <div class="masthead-subheading review-info">
+          <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
+            <li class="list-inline-item">4.6</li>
+            <li class="list-inline-item stars">
+              <span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-half">☆</span> </li>
+             <li class="list-inline-item">116 Reviews</li>
+          </ul>
+        </div>
         <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">View Fees</a>
     </div>
 </section>
@@ -51,13 +57,13 @@
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose us?</h2>
+        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Footprints Preschool?</h2>
        <div class="row row-cols-2 row-cols-md-4 g-3">
         <div class="col">
           <div class="card h-100">
             <img src="assets/security-camera.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Live CCTV Streaming</h5>
+              <h5 class="card-title fs-6 fw-semibold">Real Time Mobile Updates</h5>
             </div>
           </div>
         </div>
@@ -65,7 +71,7 @@
           <div class="card h-100">
             <img src="assets/children.png" class="icon-img mt-3 m-auto" alt="Child Ratio" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Best Adult-Child Ratio</h5>
+              <h5 class="card-title fs-6 fw-semibold">100% Nutritious Food</h5>
             </div>
           </div>
         </div>
@@ -73,7 +79,7 @@
           <div class="card h-100">
             <img src="assets/age-group.png" class="icon-img mt-3 m-auto" alt="Age Group" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Age Group :<br> 1-8 Years</h5>
+              <h5 class="card-title fs-6 fw-semibold">Watch Live CCTV Footage</h5>
             </div>
           </div>
         </div>
@@ -81,7 +87,23 @@
           <div class="card h-100">
             <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">4.7/5 Stars by 16000 Parents</h5>
+              <h5 class="card-title fs-6 fw-semibold">Tons Of Activities For All Ages</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
+            <div class="card-body">
+              <h5 class="card-title fs-6 fw-semibold">Full Attention To Your Child</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
+            <div class="card-body">
+              <h5 class="card-title fs-6 fw-semibold">High Scope Curriculum</h5>
             </div>
           </div>
         </div>
@@ -182,6 +204,13 @@
 </section>
 <!--  -->
 <section class="py-4 text-center">
+  <div class="container">
+      <h3 class="fw-semibold fs-5 mb-4 text-center">What parents Speak About Footprints?</h3>
+      <video loop="" controls="" muted="" poster="assets/poster.jpg" class="img-fluid"><source src="https://www.footprintseducation.in/ad/desktop/assets/video/Parent Speak.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
+  </div>
+</section>
+<!--  -->
+<section class="py-4 text-center">
     <div class="container">
         <h2 class="fw-semibold fs-5 mb-4 text-center">Programs</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3">
@@ -244,13 +273,6 @@
 </section>
 <!--  -->
 
-<!--  -->
-<section class="py-4 text-center">
-    <div class="container">
-        <h3 class="fw-semibold fs-5 mb-4 text-center">Happy Parents</h3>
-        <video loop="" controls="" muted="" class="img-fluid"><source src="https://www.footprintseducation.in/ad/desktop/assets/video/Parent Speak.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
-    </div>
-</section>
 <!--  -->
 <section class="footer mt-auto py-3 fixed-bottom">
     <div class="container">
