--- a/index.html
+++ b/index.html
@@ -61,49 +61,49 @@
        <div class="row row-cols-2 row-cols-md-4 g-3">
         <div class="col">
           <div class="card h-100">
-            <img src="assets/security-camera.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="40px" height="40px">
+            <img src="assets/notification.png" class="icon-img mt-3 m-auto" alt="Real Time Mobile Updates" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Real Time Mobile Updates</h5>
+              <h3 class="card-title fs-6 fw-semibold">Real Time Mobile Updates</h3>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/children.png" class="icon-img mt-3 m-auto" alt="Child Ratio" width="40px" height="40px">
+            <img src="assets/fresh.png" class="icon-img mt-3 m-auto" alt="100% Nutritious Food" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">100% Nutritious Food</h5>
+              <h3 class="card-title fs-6 fw-semibold">100% Nutritious Food</h3>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/age-group.png" class="icon-img mt-3 m-auto" alt="Age Group" width="40px" height="40px">
+            <img src="assets/monitoring.png" class="icon-img mt-3 m-auto" alt="Watch Live CCTV Footage" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Watch Live CCTV Footage</h5>
+              <h3 class="card-title fs-6 fw-semibold">Watch Live CCTV Footage</h3>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
+            <img src="assets/problem-solving.png" class="icon-img mt-3 m-auto" alt="Tons Of Activities For All Ages" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Tons Of Activities For All Ages</h5>
+              <h3 class="card-title fs-6 fw-semibold">Tons Of Activities For All Ages</h3>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
+            <img src="assets/protect.png" class="icon-img mt-3 m-auto" alt="Full Attention To Your Child" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">Full Attention To Your Child</h5>
+              <h3 class="card-title fs-6 fw-semibold">Full Attention To Your Child</h3>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/rate.png" class="icon-img mt-3 m-auto" alt="Stars" width="40px" height="40px">
+            <img src="assets/cubes.png" class="icon-img mt-3 m-auto" alt="High Scope Curriculum" width="40px" height="40px">
             <div class="card-body">
-              <h5 class="card-title fs-6 fw-semibold">High Scope Curriculum</h5>
+              <h3 class="card-title fs-6 fw-semibold">High Scope Curriculum</h3>
             </div>
           </div>
         </div>
@@ -216,55 +216,55 @@
        <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100">
-            <img src="assets/location-pin.png" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="40px" height="40px">
-            <div class="card-body">
+            <img src="assets/Toddlers.png" class="icon-img mt-3 m-auto" alt="Toddlers" width="40px" height="40px">
+            <div class="card-body px-2">
               <h5 class="card-title fs-6 fw-semibold">Toddlers</h5>
-               <p>12-24 Months</p>
+               <p class="m-0">12-24 Months</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/town-hall.png" class="icon-img mt-3 m-auto" alt="Child Ratio" width="40px" height="40px">
-            <div class="card-body">
+            <img src="assets/Play-Group.png" class="icon-img mt-3 m-auto" alt="Play Group" width="40px" height="40px">
+            <div class="card-body px-2">
               <h5 class="card-title fs-6 fw-semibold">Play Group</h5>
-              <p>24-36 Months</p>
+              <p class="m-0">24-36 Months</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="assets/parents.png" class="icon-img mt-3 m-auto" alt="Age Group" width="40px" height="40px">
-            <div class="card-body">
+            <img src="assets/Pre-Nursery.png" class="icon-img mt-3 m-auto" alt="Pre-Nursery" width="40px" height="40px">
+            <div class="card-body px-2">
               <h5 class="card-title fs-6 fw-semibold">Pre-Nursery</h5>
-              <p>36-48 Months</p>
+              <p class="m-0">36-48 Months</p>
             </div>
           </div>
         </div>
         <div class="col">
             <div class="card h-100">
-              <img src="assets/parents.png" class="icon-img mt-3 m-auto" alt="Age Group" width="40px" height="40px">
-              <div class="card-body">
+              <img src="assets/LKG.png" class="icon-img mt-3 m-auto" alt="LKG" width="40px" height="40px">
+              <div class="card-body px-2">
                 <h5 class="card-title fs-6 fw-semibold">LKG</h5>
-                <p>48-60 Months</p>
+                <p class="m-0">48-60 Months</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="assets/parents.png" class="mt-3 m-auto" alt="Age Group" width="40px" height="40px">
-              <div class="card-body">
+              <img src="assets/UKG.png" class="mt-3 m-auto" alt="UKG" width="40px" height="40px">
+              <div class="card-body px-2">
                 <h5 class="card-title fs-6 fw-semibold">UKG</h5>
-                <p>60-96 Months</p>
+                <p class="m-0">60-96 Months</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="assets/parents.png" class="mt-3 m-auto" alt="Age Group" width="40px" height="40px">
-              <div class="card-body">
+              <img src="assets/After-School.png" class="mt-3 m-auto" alt="After School" width="40px" height="40px">
+              <div class="card-body px-2">
                 <h5 class="card-title fs-6 fw-semibold">After School</h5>
-                <p>24 Months  - 8 Years</p>
+                <p class="m-0">24 Months  - 8 Years</p>
               </div>
             </div>
           </div>
