--- a/page-1.html
+++ b/page-1.html
@@ -211,7 +211,7 @@
       <div class="row row-cols-2 row-cols-md-4 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
+            <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
             <div class="card-body">
               <h5 class="card-title">Raj Singhal</h5>
               <p class="card-text">CEO, B.Tech - IIT-Delhi</p>
@@ -220,7 +220,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
+            <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
             <div class="card-body">
               <h5 class="card-title">Purvesh Sharma</h5>
               <p class="card-text">COO, B.Tech- IIT-Delhi</p>
@@ -229,7 +229,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
+            <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
             <div class="card-body">
               <h5 class="card-title">Ashish Aggarwal</h5>
               <p class="card-text">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
@@ -238,7 +238,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
+            <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
             <div class="card-body">
               <h5 class="card-title">Amita Bhardwaj</h5>
               <p class="card-text">Chief Delivery Officer</p>
