--- a/page-1.html
+++ b/page-1.html
@@ -39,7 +39,7 @@
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendor/tiny-slider/tiny-slider.css">
 
   </head>
   <body>
@@ -337,14 +337,16 @@
         </div>
   </section>
 <!--  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
 
-<script>
+<script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
+
+<script src="assets/js/custom.js"></script>
+<!-- <script>
   document.addEventListener('DOMContentLoaded', function () {
       var slider = tns({
           container: '.tiny-slider-inner',
           items: 1,
-          autoplay: true,
+          autoplay: false,
           controls: false,
           nav: false,
           autoplayButtonOutput: false,
@@ -363,7 +365,7 @@
           }
       });
   });
-</script>
+</script> -->
 
 
     </body>
