--- a/page-1.html
+++ b/page-1.html
@@ -257,71 +257,71 @@
         <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
-                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="80" data-items-xl="4" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="2">
+                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
                       <div class="item">
                           <div class="container mb-4">
-                              <img src="assets/logo/Frame-13.svg" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
                           </div>
                           <div class="container mt-4">
-                              <img src="assets/logo/Frame-14.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                      </div>
-                      <div class="item">
-                          <div class="container mb-4">
-                              <img src="assets/logo/Frame-15.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-4">
-                              <img src="assets/logo/Frame-25.svg" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
                           </div>
                       </div>
                       <div class="item">
                           <div class="container mb-4">
-                              <img src="assets/logo/ABP.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-5">
-                              <img src="assets/logo/Frame-18.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                      </div>
-                      <div class="item">
-                          <div class="container mb-4">
-                              <img src="assets/logo/Frame-19.svg" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
                           </div>
                           <div class="container mt-4">
-                              <img src="assets/logo/Frame-24.svg" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
                           </div>
                       </div>
                       <div class="item">
-                          <div class="container mt-4">
-                              <img src="assets/logo/Frame-16.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-5">
-                              <img src="assets/logo/Frame-20.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
+                        <div class="container">
+                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                        </div>
+                        <div class="container mt-4">
+                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="container">
+                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                        </div>
+                        <div class="container mt-4">
+                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                        </div>
+                    </div>
+                    <div class="item">
+                      <div class="container">
+                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
                       </div>
-                      <div class="item">
-                          <div class="container mt-5">
-                              <img src="assets/logo/Frame-21.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-4">
-                              <img src="assets/logo/Frame-22.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
+                      <div class="container">
+                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
                       </div>
-                      <div class="item">
-                          <div class="container mt-5">
-                              <img src="assets/logo/airtel.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-6">
-                              <img src="assets/logo/bata.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
+                  </div>
+                  <div class="item">
+                      <div class="container mb-4">
+                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
                       </div>
-                      <div class="item">
-                          <div class="container mt-5">
-                              <img src="assets/logo/atlassian.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
-                          <div class="container mt-5">
-                              <img src="assets/logo/Frame-23.svg" alt="Logo" height="100px" width="100px" />
-                          </div>
+                      <div class="container mt-4">
+                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
                       </div>
+                  </div>
+                  <div class="item">
+                    <div class="container mb-4">
+                        <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                    </div>
+                    <div class="container mt-4">
+                        <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container mb-4">
+                        <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                    </div>
+                    <div class="container mt-4">
+                        <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                    </div>
+                </div>
                   </div>
               </div>
           </div>
