--- a/page-1.html
+++ b/page-1.html
@@ -104,7 +104,18 @@
        </div>
     </div>
 </section>
-
+<!--  -->
+<section class="py-4 text-center">
+    <div class="container">
+        <h2 class="fw-semibold fs-5 mb-3 text-center">What Our Franchisees Say?</h2>
+        <p class="text-center">Join Us In shaping the future of early education</p>
+        <div class="row">
+          <div class="col">
+            <img src="assets/partners-speak.jpg" alt="partners-speak" class="img-fluid">
+          </div>
+        </div>
+    </div>
+</section>
 <!--  -->
 <section class="py-2 cta-block">
     <div class="container">
@@ -259,18 +270,18 @@
               <div class="tiny-slider arrow-round">
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
                       <div class="item">
-                          <div class="container mb-4">
+                          <div class="container">
                               <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
                           </div>
-                          <div class="container mt-4">
+                          <div class="container">
                               <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
                           </div>
                       </div>
                       <div class="item">
-                          <div class="container mb-4">
+                          <div class="container">
                               <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
                           </div>
-                          <div class="container mt-4">
+                          <div class="container">
                               <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
                           </div>
                       </div>
@@ -278,7 +289,7 @@
                         <div class="container">
                             <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
                         </div>
-                        <div class="container mt-4">
+                        <div class="container">
                             <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
                         </div>
                     </div>
@@ -286,7 +297,7 @@
                         <div class="container">
                             <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
                         </div>
-                        <div class="container mt-4">
+                        <div class="container">
                             <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
                         </div>
                     </div>
@@ -299,29 +310,13 @@
                       </div>
                   </div>
                   <div class="item">
-                      <div class="container mb-4">
+                      <div class="container">
                           <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
                       </div>
-                      <div class="container mt-4">
+                      <div class="container">
                           <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
                       </div>
                   </div>
-                  <div class="item">
-                    <div class="container mb-4">
-                        <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
-                    </div>
-                    <div class="container mt-4">
-                        <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="container mb-4">
-                        <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
-                    </div>
-                    <div class="container mt-4">
-                        <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
-                    </div>
-                </div>
                   </div>
               </div>
           </div>
@@ -341,32 +336,6 @@
 <script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
 
 <script src="assets/js/custom.js"></script>
-<!-- <script>
-  document.addEventListener('DOMContentLoaded', function () {
-      var slider = tns({
-          container: '.tiny-slider-inner',
-          items: 1,
-          autoplay: false,
-          controls: false,
-          nav: false,
-          autoplayButtonOutput: false,
-          responsive: {
-              640: {
-                  // edgePadding: 20,
-                  // gutter: 20,
-                  items: 1
-              },
-              700: {
-                  // gutter: 30
-              },
-              900: {
-                  items: 4
-              }
-          }
-      });
-  });
-</script> -->
-
 
     </body>
 </html>
