--- a/page-2.html
+++ b/page-2.html
@@ -199,6 +199,47 @@
           </div>
         </div>
       </div>
+      <!--  -->
+  </div>
+</section>
+<!--  -->
+<section class="py-4">
+  <div class="container">
+      <h2 class="fw-semibold fs-5 mb-4 text-center">Safety First</h2>
+     <div class="row row-cols-2 row-cols-md-4 g-3">
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/Flooring-and-furniture.jpg" class="icon-img-top" alt="Flooring and furniture">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">Childproofed Flooring and furniture</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/Checked-Staff.jpg" class="icon-img-top" alt="Background Checked Staff">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">Background Checked Staff</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/all-staff.jpg" class="icon-img-top" alt="All Women Staff">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">All Women Staff inside the center</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+          <div class="card h-100">
+            <img src="assets/No-entry.jpg" class="icon-img-top" alt="No-Entry">
+            <div class="card-body">
+              <h3 class="card-title fs-6 fw-semibold">No-Entry without registration</h3>
+            </div>
+          </div>
+        </div>
+     </div>
   </div>
 </section>
 <!--  -->
