--- a/page-1.html
+++ b/page-1.html
@@ -77,26 +77,27 @@
        <div class="row row-cols-2 row-cols-md-3 g-3"> 
         <div class="col">
           <div class="card h-100">
+            <img src="assets/success.svg" class="icon-img mt-3 m-auto" alt="success" width="80px" height="80px">
             <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">100% Success Rate:</h3>
+              <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
               <p>No Closed down centers shows our commitment and partnership with Franchisee</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            
+            <img src="assets/award-wining.svg" class="icon-img mt-3 m-auto" alt="award-wining" width="80px" height="80px">
             <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Award Winning:</h3>
+              <h3 class="card-title fs-6 fw-semibold">Award Winning</h3>
               <p>Footprints has won several awards and is recognized as the Leading Preschool in India, Innovation For Curriculum for Preschools In India. </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-           
+            <img src="assets/strong-brand.svg" class="icon-img mt-3 m-auto" alt="strong-brand" width="80px" height="80px">
             <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Strong Brand:</h3>
+              <h3 class="card-title fs-6 fw-semibold">Strong Brand</h3>
               <p>We've been operating for over 10 years and have a strong brand presence across the country.</p>
             </div>
           </div>
