--- a/page-1.html
+++ b/page-1.html
@@ -103,7 +103,7 @@
         <h2 class="title-text mb-4 text-center">What Our Franchisees Say?</h2>
         <div class="row">
           <div class="col">
-            <img src="assets/partners-speak.jpg" alt="partners-speak" class="img-fluid">
+            <img src="assets/partners-speak.webp" alt="partners-speak" class="img-fluid">
           </div>
         </div>
         <p class="text-center mt-3 mb-0">Join Us In shaping the future of early education</p>
